--- a/composer.json
+++ b/composer.json
@@ -5,30 +5,30 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^7.1.3",
-        "doctrine/dbal": "^2.9",
-        "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.7.*",
-        "laravel/passport": "^7.0",
-        "laravel/scout": "5.0.*",
-        "laravel/socialite": "^3.0",
-        "laravel/tinker": "^1.0",
+        "php": "^7.3",
+        "doctrine/dbal": "^3.0",
+        "fideloper/proxy": "^4.4",
+        "laravel/framework": "^8.22",
+        "laravel/passport": "^10.1",
+        "laravel/scout": "^8.5",
+        "laravel/socialite": "^5.1",
+        "laravel/tinker": "^2.5",
         "predis/predis": "^1.1",
-        "socialiteproviders/microsoft-graph": "^2.0",
-        "spatie/laravel-activitylog": "^3.1",
-        "spatie/laravel-permission": "^2.11",
+        "socialiteproviders/microsoft-graph": "^4.1",
+        "spatie/laravel-activitylog": "^3.16",
+        "spatie/laravel-permission": "^3.18",
         "spatie/valuestore": "^1.2",
-        "teamtnt/laravel-scout-tntsearch-driver": "^3.3",
-        "torann/geoip": "^1.0"
+        "teamtnt/laravel-scout-tntsearch-driver": "^11.1",
+        "torann/geoip": "^3.0"
     },
     "require-dev": {
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "moontoast/math": "^1.1",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "beyondcode/laravel-dump-server": "^1.7",
+        "filp/whoops": "^2.9",
+        "fzaninotto/faker": "^1.9",
+        "mockery/mockery": "^1.4",
+        "moontoast/math": "^1.2",
+        "nunomaduro/collision": "^5.2",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "classmap": [
